<resources>
    <string name="app_name">Planificaciones</string>

    <string name="title_app">“DR. LUIS AVEIGA BARBERÁN”</string>

    <dimen name="size_titles">20sp</dimen>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_new_course">Nuevo Curso</string>
    <string name="action_logout">Salir</string>

    <string name="menu_home">Cursos</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_gallery">Docentes</string>
    <string name="menu_slideshow">Información</string>
    <string name="menu_logout">Salir</string>
    <string name="menu_planning">Planificación</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="string_mision">Unidad Educativa “Dr. Luis Aveiga Barberán” Misión “Somos una institución educativa pionera, con
la responsabilidad de dar una formación integral, innovadora, creativa, con pensamiento crítico;
capaz de trabajar en equipo con la comunidad, respetando el entorno natural y social; para dar
respuesta a las necesidades del mundo contemporáneo”.</string>

    <string name="string_vision">“Ser una institución con autenticidad pedagógica, con docentes altamente capacitados,
estudiantes con pensamiento crítico, comprometidos con el desarrollo de la comunidad y el medio
ambiente, mediante la práctica pertinente, responsable, alcanzando los retos del siglo XXI”</string>

</resources>