<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.app.planificaciones.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.app.planificaciones.ui.profile.FragmentProfile"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.app.planificaciones.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.app.planificaciones.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />


    <fragment
        android:id="@+id/nav_planning"
        android:name="com.app.planificaciones.ui.planification.PlanningFragment"
        android:label="@string/menu_planning"
        tools:layout="@layout/fragment_planning" />

    <fragment
        android:id="@+id/nav_review_planning"
        android:name="com.app.planificaciones.ui.reviewplanification.ReviewPlanification"
        android:label="@string/menu_planning"
        tools:layout="@layout/fragment_review_planification" />


    <fragment
        android:id="@+id/nav_form_planning"
        android:name="com.app.planificaciones.ui.formplanification.PlanningFormFragment"
        android:label="@string/menu_planning"
        tools:layout="@layout/fragment_form_plani" />

    <fragment
        android:id="@+id/nav_form_course"
        android:name="com.app.planificaciones.ui.formcourse.CourseFormFragment"
        android:label="@string/menu_planning"
        tools:layout="@layout/fragment_form_course" />

    <!-- the value for label it is change from code -->
    <fragment
        android:id="@+id/nav_review_detail_planning"
        android:name="com.app.planificaciones.ui.reviewdetails.ReviewDetailPlanification"
        android:label="@string/menu_planning"
        tools:layout="@layout/fragment_review_detail_planification" />
</navigation>